--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,7 @@
 <a href="https://github.com/jekyll">jekyll</a> /
 <a href="https://github.com/jekyll/jekyll">jekyll</a></p>
 
-<p><a href="javascript:window.location='http://localhost:3888?url='+encodeURIComponent(window.location.href);void(0);">藏</a></p>
+<p><a href="javascript:window.location='http://localhost:3888/act?url='+encodeURIComponent(window.location.href);void(0);">藏</a></p>
 
 
   </div>
